--- a/.hgignore
+++ b/.hgignore
@@ -1,16 +1,21 @@
 syntax: glob
-D12
-D14
-D15
-D16
 *.local
 *.identcache
 *.~*
 PngComponents.zip
 *.dsk
 *.tvsconfig
-Win32
-Win64
 D2007
 *.stat
-*.ZIP
+*.zip
+*.dcu
+*.dcp
+*.bpl
+*.exe
+*.d
+*.o
+*.obj
+*.bpi
+*.a
+*.pch
+*.lib
