--- a/Packages/Delphi/PngComponentsDDesign.dproj
+++ b/Packages/Delphi/PngComponentsDDesign.dproj
@@ -63,7 +63,7 @@
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
         <DCC_Platform>x86</DCC_Platform>
         <DCC_DependencyCheckOutputName>C:\Users\Public\Documents\RAD Studio\7.0\Bpl\PngComponentsDesign140.bpl</DCC_DependencyCheckOutputName>
-        <DCC_Description>Png components designtime</DCC_Description>
+        <DCC_Description>Png components for Delphi designtime</DCC_Description>
         <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
         <DCC_N>false</DCC_N>
         <DCC_K>false</DCC_K>
